# openSeed

./: .gitignore  CLAUDE.md  Makefile  README.md  TODOS.md  pyproject.toml
docs/designs/: research-os-v1.md  smart-research-agent.md
src/openseed/: __init__.py  auth.py  config.py  doctor.py
src/openseed/agent/: __init__.py  assistant.py  autoresearch.py  claims.py  context.py  matcher.py  memory.py  reader.py  strategy.py
src/openseed/cli/: __init__.py  _helpers.py  agent.py  alerts.py  experiment.py  main.py  paper.py  read.py  research.py
src/openseed/mcp/: server.py
src/openseed/models/: __init__.py  claims.py  experiment.py  paper.py
src/openseed/services/: __init__.py  arxiv.py  pdf.py  scholar.py  watch.py
src/openseed/storage/: __init__.py  library.py  migrate.py
src/openseed/viewer/: app.py
src/openseed/web/: app.py
tests/: conftest.py  test_arxiv.py  test_autoresearch.py  test_claims.py  test_cli.py  test_context.py  test_e2e_agent.py  test_e2e_cli.py  test_integration_arxiv.py  test_integration_citations.py  test_library.py  test_mcp_server.py  test_memory.py  test_models.py  test_monitor.py  test_pdf.py  test_scholar.py  test_sqlite.py  test_strategy.py  test_web.py
