[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openseed"
version = "0.2.0"
description = "AI-powered Research Workflow Management CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "anthropic>=0.70",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "toml>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
openseed = "openseed.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/openseed"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
